<resources>
    <string name="app_name">Park Car</string>
    <string name="tab_map">Mappa</string>
    <string name="tab_parking_list">Elenco Parcheggi</string>
    <string name="map_content_description">Mappa dei parcheggi</string>
    <string name="save">Salva</string>
    <string name="center">Centra</string>
    <string name="share">Condividi</string>
    <string name="cancella">Cancella</string>
    <string name="salva">Salva</string>
    <string name="nome">Nome</string>
    <string name="inserisci_il_nome_del_parcheggio">Inserisci il nome del parcheggio:</string>
</resources>